--- a/challenge-charlie-backend/package.json
+++ b/challenge-charlie-backend/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/node-fetch": "^2.5.7",
     "ts-node": "^8.10.2",
