--- a/challenge-charlie-backend/package.json
+++ b/challenge-charlie-backend/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "challenge-charlie-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./src/app.tsx",
-  "scripts": {
-    "start": "npx ts-node-dev src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.0"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.7",
-    "@types/node-fetch": "^2.5.7",
-    "ts-node": "^8.10.2",
-    "ts-node-dev": "^1.0.0-pre.52",
-    "typescript": "^3.9.7"
-  }
+    "name": "challenge-charlie-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "./src/app.tsx",
+    "scripts": {
+        "start": "npx cross-env NODE_ENV=development && ts-node-dev src/app.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "node-fetch": "^2.6.0"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.6",
+        "@types/express": "^4.17.7",
+        "@types/node-fetch": "^2.5.7",
+        "ts-node": "^8.10.2",
+        "ts-node-dev": "^1.0.0-pre.52",
+        "typescript": "^3.9.7"
+    }
 }
